--- a/AVF/appsIOS/www/css/index.css
+++ b/AVF/appsIOS/www/css/index.css
@@ -20,7 +20,7 @@
     -webkit-tap-highlight-color: rgba(0,0,0,0); /* make transparent link selection, adjust last value opacity 0 to 1.0 */
 }
 
-body {
+/*body {
     -webkit-touch-callout: none;                /* prevent callout to copy image, etc when tap to hold */
     -webkit-text-size-adjust: none;             /* prevent webkit from resizing text to fit */
     -webkit-user-select: none;                  /* prevent copy paste, to allow, change 'none' to 'text' */
@@ -43,7 +43,7 @@ body {
     padding:0px;
     text-transform:uppercase;
     width:100%;
-}
+}*/
 
 /* Portrait layout (default) */
 .app {
@@ -69,14 +69,14 @@ body {
     }
 }
 
-h1 {
+/*h1 {
     font-size:24px;
     font-weight:normal;
     margin:0px;
     overflow:visible;
     padding:0px;
     text-align:center;
-}
+}*/
 
 .event {
     border-radius:4px;
